--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </main>
 
   <footer>
-    <p>Autor: Litsy Romero | &copy; <span id="year"></span></p>
+    <p>Autor: Noir-16 | &copy; <span id="year"></span></p>
   </footer>
 
   <script>
